Add initial responsive main page layout

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,25 @@
-<!doctype html>
-<html>
-<head>
-  <title>CashPlot</title>
-  <meta name="description" content="CashPlot">
-  <meta name="keywords" content="finance graph charts">
-</head>
-<body>
-  <div id="tester" style="width:600px;height:250px;"></div>
-  <script src="deps/plotly-latest.min.js"></script>
-  <script src="main.js"></script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>CashPlot</title>
+    <meta name="description" content="CashPlot">
+    <meta name="keywords" content="finance graph charts">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="deps/normalize.css">
+    <link rel="stylesheet" href="deps/milligram.css">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <main class="wrapper">
+      <header id="home" class="container margin-top-10">
+        <h1 id="title" class="text-center">CashPlot</h1>
+      </header>
+      <section class="container flex-center margin-top-10">
+        <button class="button">Get Started</button>
+      </div>
+    </main>
+
+    <script src="deps/plotly-latest.min.js"></script>
+    <script src="main.js"></script>
+  </body>
 </html>
