Move CSS and JS files so that the browser can find them if / is routed to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <title>CashPlot</title>
+    <meta charset="utf-8">
     <meta name="description" content="CashPlot">
     <meta name="keywords" content="finance graph charts">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="deps/normalize.css">
-    <link rel="stylesheet" href="deps/milligram.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/deps/normalize.css">
+    <link rel="stylesheet" href="css/deps/milligram.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <main class="wrapper">
@@ -19,7 +20,7 @@
       </div>
     </main>
 
-    <script src="deps/plotly-latest.min.js"></script>
-    <script src="main.js"></script>
+    <script src="js/deps/plotly-latest.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
