Improve input page and hide nav bar on home page

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
   </head>
   <body>
     <main class="wrapper">
-      <nav class="navigation">
+      <nav class="navigation disabled" id="navigation">
         <section class="container">
-          <a class="navigation-title" href="index.html">
+          <a class="navigation-title" id="home-button">
             <h1 class="title">CashPlot</h1>
           </a>
         </section>
@@ -27,14 +27,33 @@
           <button class="button" id="get-started-button">Get Started</button>
         </section>
       </div>
-      <section class="container margin-top-10 page disabled" id="input-page">
-        <h1>Input Data</h1>
-        <h3>Transactions</h3>
-        <i>Provide the transaction data you want to plot below or upload a file.</i><br>
+      <section class="container margin-top-5 page disabled" id="input-page">
+        <i>
+          Start entering the data by filling in the fields. It's possible to
+          create an export, for example if you want to create a back-up or
+          share the results with someone else.
+        </i>
+        <form>
+          <input type="file" class="disabled" id="transaction-data-upload"></input>
+          <label class="button button-outline" for="config-upload">Upload Parameters</label>
+          <input type="file" class="disabled" id="config-upload"></input>
+          <button class="button" id="config-export">Export Parameters</button>
+        </form>
+
+        <h2>Transaction Data</h2>
+        <i>Provide the transaction data to plot below or upload a file.</i><br>
         <form>
           <textarea rows="5" cols="20" id="transaction-export-input"></textarea><br>
-          <input type="file" id="transaction-export-upload"></input>
+          <label class="button" for="transaction-data-upload">Upload Transactions</label>
         </form>
+
+        <h2>Savings Accounts</h2>
+        <i>Provide the names of the savings accounts that you want to track in addition to the main (checkings) account</i><br>
+        <button class="button button-small" id="add-category-button">Add</button>
+
+        <h2>Categories</h2>
+        <i>Tracking different types of spending/income is possible by specifying categories. Give each category a name and ways for transactions to be identified.</i><br>
+        <button class="button button-small" id="add-category-button">Add</button>
       </section>
       <section class="container margin-top-10 page disabled" id="balance-page">
       </section>
