Implement balance and totals graph drawing

--- a/src/index.html
+++ b/src/index.html
@@ -120,18 +120,18 @@
 
       <section class="container margin-top-5 page disabled" id="totals-page">
         <h1>Totals</h1>
-        <select id='totals-select'>
-          <option value='daily'>Daily</option>
-          <option value='weekly'>Weekly</option>
-          <option value='monthly' selected>Monthly</option>
-          <option value='quarterly'>Quarterly</option>
+        <select id='totals-select' autocomplete="off">
           <option value='yearly'>Yearly</option>
+          <option value='quarterly'>Quarterly</option>
+          <option value='monthly' selected>Monthly</option>
+          <option value='weekly'>Weekly</option>
+          <option value='daily'>Daily</option>
         </select>
-        <div class="graph disabled" id="daily-totals-graph"></div>
-        <div class="graph disabled" id="weekly-totals-graph"></div>
-        <div class="graph" id="monthly-totals-graph"></div>
-        <div class="graph disabled" id="quarterly-totals-graph"></div>
         <div class="graph disabled" id="yearly-totals-graph"></div>
+        <div class="graph disabled" id="quarterly-totals-graph"></div>
+        <div class="graph" id="monthly-totals-graph"></div>
+        <div class="graph disabled" id="weekly-totals-graph"></div>
+        <div class="graph disabled" id="daily-totals-graph"></div>
       </section>
 
       <section class="container margin-top-5 page disabled" id="faq-page">
