Add button for example parameters

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
         <form>
           <label class="button button-outline" for="parameters-upload">Upload Parameters</label>
           <input type="file" class="disabled" id="parameters-upload"></input>
+          <button class="button button-outline" id="example-parameters-button">Show Example</button>
           <span class="text-icon icon-cross disabled" id="parameters-upload-error">&#10799;</span>
           <span id="parameters-upload-message"></span>
         </form>
