--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,10 @@
           <h1 id="title" class="text-center">CashPlot</h1>
         </header>
         <section class="container flex-center margin-top-10">
-          <i>Create peace-of-mind by consciously steering your financials.</i>
+          <i>
+            Don't let your dreams be miscalculations. Just do it.<br>
+            Take control of your financials.
+          </i>
         </section>
         <section class="container flex-center margin-top-10">
           <button class="button" id="start-button">Start</button>
@@ -62,7 +65,8 @@
       </div>
       <section class="container margin-top-5 page disabled" id="input-transactions-page">
         <h2>Data</h2>
-        <i class="description">Enter the transactions to be graphed.</i>
+        <i class="description">First step is to get the raw data. Your bank usually provides a way to download all the transactions you've made in a certain format, such as CSV. This is where you enter that data.</i>
+        <i class="description">ING Bank .csv files are supported. See the FAQ for how to download these from the ING Bank portal.</i>
         <form>
           <label class="button" for="transaction-data-upload">Upload</label>
           <input type="file" class="disabled" id="transaction-data-upload"></input>
@@ -70,12 +74,10 @@
           <span class="text-icon icon-ack disabled" id="transaction-data-ok">&#10004;</span>
           <span id="transaction-data-message"></span>
         </form>
-        <i class="description">ING Bank .csv files are supported. See the FAQ for how to download these from the ING Bank portal.</i>
 
         <br />
-        <br />
         <i class="description">
-          If you've already used CashPlot before, you can transfer the results from/to another device.
+          If you've already used CashPlot before, you can transfer results from/to another device. That way you can skip the next few pages.
         </i>
         <form>
           <label class="button button-outline" for="parameters-upload">Import</label>
@@ -85,13 +87,14 @@
           <span class="text-icon icon-cross disabled" id="parameters-upload-error">&#10799;</span>
           <span id="parameters-upload-message"></span>
         </form>
+        <button class="button" id="input-transactions-next-button">Next</button>
 
       </section>
       <section class="container margin-top-5 page disabled" id="input-accounts-page">
 
         <h2>Accounts</h2>
         <i class="description">
-          Provide the accounts you want to track.
+          Provide a list of (bank) accounts you want to track. The first account is always the one for which you gave transaction data. Other accounts may be savings accounts, retirement accounts, et cetera. Enable the check mark if the balance of an account should add to your "net worth".
         </i>
         <form>
           <table id="account-table">
@@ -108,12 +111,14 @@
           </table>
           <button class="button button-small" id="add-account-button">Add</button>
         </form>
+        <button class="button" id="input-accounts-next-button">Next</button>
       </section>
       <section class="container margin-top-5 page disabled" id="input-categories-page">
 
         <h2>Categories</h2>
         <i class="description">
-          Specify the categories to split transactions into. Transactions from/to savings accounts should be categorized with the same name as the account itself.
+          In order to make sense of the kinds of things you're spending/earning on, it's possible to group transactions into categories. These categories will later be summed up to get a total amount spent/earned for a certain period.
+          CashPlot isn't able to tell when a transaction occurs between the main and savings accounts. For that to work, you have to group these transactions into a category with the same name as the savings account.
         </i>
         <form>
           <table id="category-table">
@@ -130,6 +135,7 @@
           </table>
           <button class="button button-small" id="add-category-button">Add</button>
         </form>
+        <button class="button" id="input-categories-next-button">Next</button>
 
       </section>
 
