Handle "No device space" errors when loading/saving transactions and refactor status bar

--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,9 @@
           </a>
         </section>
       </nav>
-      <nav class="navigation disabled" id="create-graph-bar">
+      <nav class="navigation disabled" id="status-bar">
         <section class="container">
-          <span class="message" id="create-graph-message"></span>
+          <span class="message" id="status-message"></span>
           <span>&nbsp;</span>
         </section>
       </nav>
