--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
     <meta name="description" content="CashPlot">
     <meta name="keywords" content="finance graph charts">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" sizes="192x192" href="assets/img/favicon-192x192.png">
+    <link rel="icon" sizes="512x512" href="assets/img/favicon-512x512.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon-180x180.png">
     <link rel="stylesheet" href="css/deps/normalize-8.0.1.css">
     <link rel="stylesheet" href="css/deps/milligram-1.4.1.css">
     <link rel="stylesheet" href="css/style.css">
