Start TypeScript rewrite: remove JS modules and set up TSC + Webpack

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -224,7 +224,7 @@
           });
       }
     </script>
-    <script src="js/deps/plotly-1.58.4.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/plotly-1.58.4.min.js"></script>
+    <script src="js/bundle.js"></script>
   </body>
 </html>
