Add initial page and nav components

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div id="page">
-      <page-component></page-component>
+    <div id="app">
+      <app-component></app-component>
     </div>
     <script>
       // Check to make sure the browser supports service workers
